# driftcut

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  release-audit.yml
assets/slides/: slide-1.html  slide-2.html  slide-3.html
docs/: concept-document-v0.3.md  demo-report.html  redis-recall-v0.7.0-plan.md
examples/: migration.redis.yaml  migration.yaml  migration_test_openrouter.yaml  prompts.csv  replay.json  replay.yaml
examples/demo/: README.md  migration-haiku.yaml  migration-mini.yaml  prompts.csv  raw-prompts.txt  replay-haiku.json  replay-haiku.yaml  replay-mini.json  replay-mini.yaml  report-haiku.html  report-mini.html  results-haiku.json  results-mini.json
scripts/: check_release_alignment.py  check_release_state.py  replay_converter_template.py
site/: CNAME  index.html
src/driftcut/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  corpus.py  decision.py  diff.py  executor.py  init.py  judge.py  models.py  quality.py  replay.py  reporting.py  runner.py  sampler.py  store.py  store_null.py  store_redis.py  trackers.py
tests/: test_bootstrap.py  test_cli.py  test_config.py  test_corpus.py  test_diff.py  test_executor.py  test_init.py  test_judge.py  test_models.py  test_quality.py  test_replay.py  test_reporting.py  test_runner.py  test_sampler.py  test_store.py  test_trackers.py
